<package>
  <name>kdl_typekit</name>
  <version>0.4.0</version>
  <description>This package contains the KDL RTT bindings</description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>LGPL / BSD</license>

  <url type="website">http://ros.org/wiki/kdl_typekit</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Steven Bellens</author>
  <author>Ruben Smits</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this pacakge. -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>kdl</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>kdl</run_depend>

  <export>

  </export>
</package>
